--- a/kubernetes/webserver.yml
+++ b/kubernetes/webserver.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: webserverservice
+  name: webserver-service
   labels:
     app: webserver
 spec:
@@ -13,12 +13,17 @@ spec:
   selector:
     app: webserver
 ---
-apiVersion: v1
-kind: ReplicationController
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: webserver
+  name: webserver-deployment
+  labels:
+    app: webserver
 spec:
-  replicas: 1
+  replicas: 2
+  selector:
+    matchLabels:
+      app: webserver
   template:
     metadata:
       labels:
@@ -27,6 +32,6 @@ spec:
       containers:
       - name: webserver
         image: test3
-        imagePullPolicy : Never
         ports:
         - containerPort: 8888
+        imagePullPolicy: "Never"
