--- a/kubernetes/role.yml
+++ b/kubernetes/role.yml
@@ -3,9 +3,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: pods-update
 rules:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get","list","update"]
+- apiGroups: ["extensions", "apps"]
+  resources: ["deployments"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
