--- a/kubernetes/pod-update-deployment.yml
+++ b/kubernetes/pod-update-deployment.yml
@@ -1,18 +1,45 @@
 apiVersion: v1
-kind: Pod
+kind: Service
 metadata:
-  name: pod-update-deployment
+  name: cluster-update-service
+  labels:
+    app: cluster-update
 spec:
-  containers:
-  - name: container-update-deployment
-    image: ubuntu:16.04
-    command: ["/bin/sh"]
-    args: ["-c", "while true; do echo hello; sleep 10;done"]
-    volumeMounts:
-    - name: registry-url
-      mountPath: "/mnt/registry-url"
-      readOnly: true
-  volumes:
-  - name: registry-url
-    secret:
-      secretName: secret-registry
+  type: NodePort
+  ports:
+  - port: 25565
+    targetPort : 25565
+    protocol: TCP
+    name: http
+  selector:
+    app: cluster-update
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: cluster-update-deployment
+  labels:
+    app: cluster-update
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: cluster-update
+  template:
+    metadata:
+      labels:
+        app: cluster-update
+    spec:
+      containers:
+      - name: cluster-update-container
+        image: ec2-54-173-238-160.compute-1.amazonaws.com:443/cluster-update_v0.0.1
+        ports:
+        - containerPort: 25565
+        volumeMounts:
+        - name: registry-url
+          mountPath: "/mnt/registry-url"
+          readOnly: true
+      volumes:
+      - name: registry-url
+        secret:
+          secretName: secret-registry
