--- a/kubernetes/cluster-update-deployment.yml
+++ b/kubernetes/cluster-update-deployment.yml
@@ -1,19 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: cluster-update-service
-  labels:
-    app: cluster-update
-spec:
-  type: NodePort
-  ports:
-  - port: 25565
-    targetPort : 25565
-    protocol: TCP
-    name: http
-  selector:
-    app: cluster-update
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -32,7 +16,7 @@ spec:
     spec:
       containers:
       - name: cluster-update-container
-        image: ec2-54-173-238-160.compute-1.amazonaws.com:443/cluster-update_v0.0.1
+        image: cluster-update
         ports:
         - containerPort: 25565
         volumeMounts:
