--- a/kubernetes/webserver-deployment.yml
+++ b/kubernetes/webserver-deployment.yml
@@ -1,18 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: webserver-service
-  labels:
-    app: webserver
-spec:
-  type: NodePort
-  ports:
-  - port: 8888
-    protocol: TCP
-    name: http
-  selector:
-    app: webserver
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -30,8 +15,8 @@ spec:
         app: webserver
     spec:
       containers:
-      - name: webserver
-        image: test3
+      - name: webserver-container
+        image: webserver
         ports:
         - containerPort: 8888
         imagePullPolicy: "Never"
