--- a/kubernetes/web-server-deployment.yml
+++ b/kubernetes/web-server-deployment.yml
@@ -1,22 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: webserver-deployment
+  name: web-server-deployment
   labels:
-    app: webserver
+    app: web-server
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: webserver
+      app: web-server
   template:
     metadata:
       labels:
-        app: webserver
+        app: web-server
     spec:
       containers:
-      - name: webserver-container
-        image: webserver
+      - name: web-server-container
+        image: web-server
         ports:
         - containerPort: 8888
-        imagePullPolicy: "Never"
