--- a/kubernetes/web-server-service.yml
+++ b/kubernetes/web-server-service.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: webserver-service
+  name: web-server-service
   labels:
-    app: webserver
+    app: web-server
 spec:
   type: NodePort
   ports:
@@ -11,4 +11,4 @@ spec:
     protocol: TCP
     name: http
   selector:
-    app: webserver
+    app: web-server
